- Impove techinical and personal information

--- a/source/src/app/aniruddh/components/personal-information/personal-information.component.html
+++ b/source/src/app/aniruddh/components/personal-information/personal-information.component.html
@@ -1,34 +1,15 @@
 <div class="main-page">
-  <p>
-    <strong>PERSONAL DETAILS</strong>
-  </p>
+  <p><strong>Personal Details:</strong></p>
 
   <div class="details">
-    <p>
-      VISA : USA working visa (H1-B I-140 done )
-      - B1/B2 US business visa
-    </p>
-    <p>
-      Date of Birth : 09 June 1985
-    </p>
-    <p>
-      Gender : Male
-    </p>
-    <p>
-      Marital Status : Married
-    </p>
-    <p>
-      Passport No : N2042274
-    </p>
-    <p>
-      Nationality : Indian
-    </p>
-    <p>
-      Present Address : California, MD USA
-    </p>
-    <p>
-      Language : English, Hindi, Odia
-    </p>
+    <p>VISA : H1B: USA working visa / B1/B2 US business travel visa</p>
+    <p>Date of Birth : 09 June 1985</p>
+    <p>Gender : Male</p>
+    <!--<p>Marital Status : Married</p>-->
+    <!--<p>Passport No : N2042274</p>-->
+    <p>Nationality : Indian</p>
+    <p>Present Address : California, MD USA</p>
+    <p>Language : English, Hindi, Odia</p>
 
   </div>
 </div>
