--- a/source/src/app/aniruddh/components/summary/summary.component.html
+++ b/source/src/app/aniruddh/components/summary/summary.component.html
@@ -3,8 +3,12 @@
 
   <div class="name">
     <h2>Aniruddha Das</h2>
+    <p>phone: +14156509102</p>
+    <p>email: aniruddhadas9@gmail.com</p>
     <!--<strong>13+ Years of IT experience</strong>-->
+  </div>
 
+  <div class="about">
     <p>
       A self-motivated Frontend (UI), full-stack, multi-domain, responsible and
       solutions-orientated
@@ -20,170 +24,172 @@
   </div>
 
 
-  <p>
-    <strong>Architecture and Design:</strong>
-  </p>
-  <ul>
-    <li>
-      Extensive experience in design and develop of modern age web (UI) applications using frameworks like <strong>Angular,
-      React</strong>.
-    </li>
-    <li>
-      Design and develop of modern SAS based application to be served in subscription model.
-    </li>
-    <li>
-      Good Experience in analyzing business requirement and writing Functional specification and design for the IT
-      development.
-    </li>
-    <li>
-      Architectural experience of designing test framework for the developer and testers using <strong>Protractor,
-      Karma,
-      Jasmine</strong>
-      and configuring them with <strong>Gulp, Grunt, npm, etc. </strong>
-    </li>
-    <li>
-      Good experience setting up CI/CD to automate build and deployment like <strong>Jenkins, GoCD, Circle CI,
-      etc</strong>.
-    </li>
-    <li>
-      Design and develop of modern application to consume REST API (web services)
-    </li>
-    <li>
-      Good experience in designing Behavior Driven Development (BDD) model and Test Driven Development (TDD).
-    </li>
-    <li>
-      Good experience of code review, Pair programming, Mentoring, etc
-    </li>
-  </ul>
+  <div class="skills">
+    <p>
+      <strong>Architecture and Design:</strong>
+    </p>
+    <ul>
+      <li>
+        Extensive experience in design and develop of modern age web (UI) applications using frameworks like <strong>Angular,
+        React</strong>.
+      </li>
+      <li>
+        Design and develop of modern SAS based application to be served in subscription model.
+      </li>
+      <li>
+        Good Experience in analyzing business requirement and writing Functional specification and design for the IT
+        development.
+      </li>
+      <li>
+        Architectural experience of designing test framework for the developer and testers using <strong>Protractor,
+        Karma,
+        Jasmine</strong>
+        and configuring them with <strong>Gulp, Grunt, npm, etc. </strong>
+      </li>
+      <li>
+        Good experience setting up CI/CD to automate build and deployment like <strong>Jenkins, GoCD, Circle CI,
+        etc</strong>.
+      </li>
+      <li>
+        Design and develop of modern application to consume REST API (web services)
+      </li>
+      <li>
+        Good experience in designing Behavior Driven Development (BDD) model and Test Driven Development (TDD).
+      </li>
+      <li>
+        Good experience of code review, Pair programming, Mentoring, etc
+      </li>
+    </ul>
 
 
-  <p>
-    <strong>Frontend (UI/UX):</strong>
-  </p>
-  <ul>
-    <li>
-      Strong Implementation knowledge of <strong>Angular, React</strong>
-    </li>
-    <li>
-      Strong development experience in <strong>Typescript</strong> and <strong>ES6</strong> development along with
-      module
-      implementation like <strong>CommonJS, AMD, RequireJS, UMD, SystemJS, ES6</strong>.
-    </li>
-    <li>
-      Good implementation knowledge of Core <strong>Object Oriented JavaScript, TypeScript, ES6, etc.</strong>
-    </li>
-    <li>
-      Good Experience in many 3rd party library like D3, Chart.js, etc.
-    </li>
-    <li>
-      <strong>Strong in HTML5, CSS3, TypeScript, JavaScript, jQuery, jQuery Mobile.</strong>
-    </li>
-    <li>
-      Good experience using <strong>SCSS/SASS</strong> preprocessor of CSS
-      and use of SCSS technologies like <strong>Mixins, Media query, nesting variable.</strong>
-    </li>
-    <li>
-      Good experience in securing front end applications using various
-      technologies to prevent <strong>XSRF, CSRF</strong> kind of attacks
-    </li>
-  </ul>
+    <p>
+      <strong>Frontend (UI/UX):</strong>
+    </p>
+    <ul>
+      <li>
+        Strong Implementation knowledge of <strong>Angular, React</strong>
+      </li>
+      <li>
+        Strong development experience in <strong>Typescript</strong> and <strong>ES6</strong> development along with
+        module
+        implementation like <strong>CommonJS, AMD, RequireJS, UMD, SystemJS, ES6</strong>.
+      </li>
+      <li>
+        Good implementation knowledge of Core <strong>Object Oriented JavaScript, TypeScript, ES6, etc.</strong>
+      </li>
+      <li>
+        Good Experience in many 3rd party library like D3, Chart.js, etc.
+      </li>
+      <li>
+        <strong>Strong in HTML5, CSS3, TypeScript, JavaScript, jQuery, jQuery Mobile.</strong>
+      </li>
+      <li>
+        Good experience using <strong>SCSS/SASS</strong> preprocessor of CSS
+        and use of SCSS technologies like <strong>Mixins, Media query, nesting variable.</strong>
+      </li>
+      <li>
+        Good experience in securing front end applications using various
+        technologies to prevent <strong>XSRF, CSRF</strong> kind of attacks
+      </li>
+    </ul>
 
 
-  <p>
-    <strong>Backend (Node/Java/PHP/Python):</strong>
-  </p>
-  <ul>
-    <li>
-      Good knowledge of designing and developing Enterprise Application using NodeJS, spring boot, etc.
-    </li>
-    <li>
-      Worked in many Enterprise Application using<strong>JAVA, J2EE, Spring, Spring Boot, Spring MVC, NodeJS,
-      etc.</strong>
-    </li>
-    <li>
-      Good experience in developing PHP web application using cakePHP, joomla, etc.
-    </li>
-  </ul>
+    <p>
+      <strong>Backend (Node/Java/PHP/Python):</strong>
+    </p>
+    <ul>
+      <li>
+        Good knowledge of designing and developing Enterprise Application using NodeJS, spring boot, etc.
+      </li>
+      <li>
+        Worked in many Enterprise Application using<strong>JAVA, J2EE, Spring, Spring Boot, Spring MVC, NodeJS,
+        etc.</strong>
+      </li>
+      <li>
+        Good experience in developing PHP web application using cakePHP, joomla, etc.
+      </li>
+    </ul>
 
 
-  <p>
-    <strong>Database and NoSQL:</strong>
-  </p>
-  <ul>
-    <li>
-      Good experience in designing database in Oracle and MySQL platform.
-    </li>
-    <li>
-      Good experience in NoSQL platform like <strong>Google datastore, MongoDB, CouchBase, etc</strong>
-    </li>
-    <li>
-      Good experience in writing PL SQL (PL/SQL) and SQL in Relational database (RDBMS).
-    </li>
-  </ul>
+    <p>
+      <strong>Database and NoSQL:</strong>
+    </p>
+    <ul>
+      <li>
+        Good experience in designing database in Oracle and MySQL platform.
+      </li>
+      <li>
+        Good experience in NoSQL platform like <strong>Google datastore, MongoDB, CouchBase, etc</strong>
+      </li>
+      <li>
+        Good experience in writing PL SQL (PL/SQL) and SQL in Relational database (RDBMS).
+      </li>
+    </ul>
 
 
-  <p>
-    <strong>Cloud and SAS:</strong>
-  </p>
-  <ul>
-    <li>
-      Good experience in developing application cloud infrastructure like <strong>Google App Engine, AWS</strong>.
-    </li>
-    <li>
-      Experence in developing <strong>SAS based application</strong> in Cloud platform like GCP, AWS
-    </li>
-    <li>
-      Good experience in google Cloud data store, Big table and Integrating many google API like map, youtube, cloud
-      deploy, etc
-    </li>
-  </ul>
+    <p>
+      <strong>Cloud and SAS:</strong>
+    </p>
+    <ul>
+      <li>
+        Good experience in developing application cloud infrastructure like <strong>Google App Engine, AWS</strong>.
+      </li>
+      <li>
+        Experence in developing <strong>SAS based application</strong> in Cloud platform like GCP, AWS
+      </li>
+      <li>
+        Good experience in google Cloud data store, Big table and Integrating many google API like map, youtube, cloud
+        deploy, etc
+      </li>
+    </ul>
 
-  <p>
-    <strong>Management and Processes: </strong>
-  </p>
-  <ul>
-    <li>
-      Good Leadership and team managing skills.
-    </li>
-    <li>
-      Good development experience is <strong>Agile</strong> methodology and agile process.
-    </li>
-    <li>
-      Good team player and also individual contributor by taking ownership of application and also experiences of
-      mentoring intern and juniors.
-    </li>
-    <li>
-      Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
-    </li>
-  </ul>
+    <p>
+      <strong>Management and Processes: </strong>
+    </p>
+    <ul>
+      <li>
+        Good Leadership and team managing skills.
+      </li>
+      <li>
+        Good development experience is <strong>Agile</strong> methodology and agile process.
+      </li>
+      <li>
+        Good team player and also individual contributor by taking ownership of application and also experiences of
+        mentoring intern and juniors.
+      </li>
+      <li>
+        Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
+      </li>
+    </ul>
 
-  <p>
-    <strong>Domain and Functional:</strong>
-  </p>
-  <ul>
-    <li>
-      Has good domain knowledge in developing Enterprise application in domains like <strong>FinTech, HRMS, SCM, CRM,
-      Real-estate, admin portal, Insurance, Technology, etc.</strong>
-    </li>
-    <li>
-      Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
-    </li>
-  </ul>
+    <p>
+      <strong>Domain and Functional:</strong>
+    </p>
+    <ul>
+      <li>
+        Has good domain knowledge in developing Enterprise application in domains like <strong>FinTech, HRMS, SCM, CRM,
+        Real-estate, admin portal, Insurance, Technology, etc.</strong>
+      </li>
+      <li>
+        Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
+      </li>
+    </ul>
 
 
-  <p>
-    <strong>Testing Frameworks:</strong>
-  </p>
-  <ul>
-    <li>
-      Good experience in unit testing and behavior testing using framework like<strong>protractor, Jasmine,
-      Karma,</strong> <strong>cucumber, web-driver, etc.</strong>
-    </li>
-    <li>
-      Good experience of <strong>Test Driven development (TDD)</strong> and <strong>Behavior driven development
-      (BDD)</strong>
-      using Cucumber and many more frameworks.
-    </li>
-  </ul>
+    <p>
+      <strong>Testing Frameworks:</strong>
+    </p>
+    <ul>
+      <li>
+        Good experience in unit testing and behavior testing using framework like<strong>protractor, Jasmine,
+        Karma,</strong> <strong>cucumber, web-driver, etc.</strong>
+      </li>
+      <li>
+        Good experience of <strong>Test Driven development (TDD)</strong> and <strong>Behavior driven development
+        (BDD)</strong>
+        using Cucumber and many more frameworks.
+      </li>
+    </ul>
 
+  </div>
 </div>
