--- a/source/src/app/aniruddh/components/techinical-skills/techinical-skills.component.html
+++ b/source/src/app/aniruddh/components/techinical-skills/techinical-skills.component.html
@@ -1,43 +1,19 @@
-<div class="main-page">
+<div class="component">
   <p>
-    <strong>Techinical Skills</strong>
+    <strong>Technical Skills</strong>
   </p>
 
   <div class="skills">
-    <p>
-      Backend programming : JAVA/J2EE, PHP, spring, Spring Boot, NodeJS, etc
-    </p>
-    <p>
-      Frontend or UI Programming : TypeScript, JavaScript, HTML5, SCSS, SASS, CSS
-      3
-    </p>
-    <p>
-      JavaScript Libraries : Angular 2, Angular 1, jQuery, jQuery Mobile
-    </p>
-    <p>
-      RDBMS : Oracle 11g, PL/SQL, SQL, MySQL5.5, Google Cloud datastore.
-    </p>
-    <p>
-      Cloud platforms : Google Cloud platform, Google App Engine
-    </p>
-    <p>
-      Web Server : Tomcat, XAMPP, WebLogic, App Engine Server, lite-server, etc
-    </p>
-    <p>
-      Framework : Spring 4, Struts 1.2/2, CakePHP, Cucumber, etc
-    </p>
-    <p>
-      IDE : InteliJ, Web Storm, Eclipse, My Eclipse, SQL Navigator.
-    </p>
-    <p>
-      Source Control : Git, Google Cloud source, SVN, CVS, Perforce
-    </p>
-    <p>
-      Operating Systems : Windows, Ubuntu Linux, Mac 10x, UNIX, Solaris
-    </p>
-    <p>
-      Tools : Git, JIRA Issue Tracking Tool, BMC Remedy, HP QC, Star, etc.
-    </p>
-
+    <p>Frontend (UI): TypeScript, JavaScript, HTML5, SCSS, SASS, CSS3</p>
+    <p>Frontend Frameworks: Angular, React, jQuery, jQuery Mobile</p>
+    <p>RDBMS : Oracle 11g, PL/SQL, SQL, MySQL5.5, Google Cloud datastore.</p>
+    <p>Cloud platforms : Google Cloud platform, Google App Engine, AWS</p>
+    <p>Web Server : Tomcat, XAMPP, App Engine Server, AWS</p>
+    <p>Backend: JAVA/J2EE, PHP, spring, Spring Boot, NodeJS, etc</p>
+    <p>Backend Framework : Spring 4, Struts 1.2/2, CakePHP, Cucumber, etc</p>
+    <p>IDE : InteliJ, WebStorm, Eclipse, My Eclipse, SQL Navigator.</p>
+    <p>Source Control : Git, Google Cloud source, SVN, CVS, Perforce</p>
+    <p>Operating Systems : IOS, Windows, Ubuntu Linux, UNIX</p>
+    <p>Tools : Git, JIRA, BMC Remedy, Incident manager, Star, etc.</p>
   </div>
 </div>
