- Fix print button display on the printed section

--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -27,6 +27,10 @@
     <ani-honors-and-awards></ani-honors-and-awards>
   </div>
 
+  <!--<div class="sections">
+    <ani-educations></ani-educations>
+  </div>-->
+
   <div class="sections">
     <ani-personal-information></ani-personal-information>
   </div>
