- Move skills in summary to data/service  - Add npm link at the top

--- a/source/src/app/aniruddh/components/projects/projects.component.html
+++ b/source/src/app/aniruddh/components/projects/projects.component.html
@@ -20,30 +20,14 @@
               <h5>{{page}}. {{project.name}}</h5>
             </div>
             <div class="project-body">
-              <p>
-                Project Name: {{project.name}}
-              </p>
-              <p>
-                Role: {{project.role}}
-              </p>
-              <p>
-                Client: {{project.client}}
-              </p>
-              <p>
-                Application Server: {{project.applicationServer}}
-              </p>
-              <p>
-                Duration: {{project.duration}}
-              </p>
-              <p>
-                Team: {{project.team}}
-              </p>
-              <p>
-                Technology used: {{project.technologyUsed}}
-              </p>
-              <p>
-                Tools: {{project.tools}}
-              </p>
+              <p>Project Name: {{project.name}}</p>
+              <p>Role: {{project.role}}</p>
+              <p>Client: {{project.client}}</p>
+              <p>Application Server: {{project.applicationServer}}</p>
+              <p>Duration: {{project.duration}}</p>
+              <p>Team: {{project.team}}</p>
+              <p>Technology used: {{project.technologyUsed}}</p>
+              <p>Tools: {{project.tools}}</p>
               <p class="card-text">
                 Description:
                 <cfs-read-more
