--- a/source/src/app/aniruddh/social-links/social-links.component.scss
+++ b/source/src/app/aniruddh/social-links/social-links.component.scss
@@ -14,6 +14,9 @@
         .stackoverflow {
           color: #d28d18;
         }
+        .npm {
+          color: #e03e17;
+        }
         .print {
           color: #706f6f;
         }
