--- a/source/src/app/aniruddh/social-links/social-links.component.html
+++ b/source/src/app/aniruddh/social-links/social-links.component.html
@@ -1,24 +1,29 @@
 <div class="title">
-    <div class="social">
-      <span>
-        <a target="_blank" href="https://www.linkedin.com/in/aniruddhadas9/">
-          <fa-icon class="linkedin" [icon]="faLinkedin" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-        <span>
-        <a target="_blank" href="https://github.com/aniruddhadas9">
-          <fa-icon class="github" [icon]="faGithub" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-        <span>
-        <a target="_blank" href="https://stackoverflow.com/users/537647/aniruddha-das">
-          <fa-icon class="stackoverflow" [icon]="faStackOverflow" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-        <span>
-        <a href="javascript: void(0)" onclick="window.print();">
-          <fa-icon class="print" [icon]="faPrint" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-    </div>
+  <div class="social">
+    <span>
+      <a target="_blank" href="https://www.linkedin.com/in/aniruddhadas9/">
+        <fa-icon class="linkedin" [icon]="faLinkedin" [size]="'3x'"></fa-icon>
+      </a>
+    </span>
+    <span>
+      <a target="_blank" href="https://github.com/aniruddhadas9">
+        <fa-icon class="github" [icon]="faGithub" [size]="'3x'"></fa-icon>
+      </a>
+    </span>
+    <span>
+      <a target="_blank" href="https://stackoverflow.com/users/537647/aniruddha-das">
+        <fa-icon class="stackoverflow" [icon]="faStackOverflow" [size]="'3x'"></fa-icon>
+      </a>
+    </span>
+    <span>
+      <a target="_blank" href="https://www.npmjs.com/~aniruddhadas9">
+        <fa-icon class="npm" [icon]="faNpm" [size]="'3x'"></fa-icon>
+      </a>
+    </span>
+    <span>
+      <a href="javascript: void(0)" onclick="window.print();">
+        <fa-icon class="print" [icon]="faPrint" [size]="'3x'"></fa-icon>
+      </a>
+    </span>
+  </div>
 </div>
