- Separate data for few components

--- a/source/src/app/aniruddh/components/declaration/declaration.component.html
+++ b/source/src/app/aniruddh/components/declaration/declaration.component.html
@@ -1,18 +1,5 @@
-<p>
-  <strong>Declaration</strong>
-</p>
-
-<p>
-  I hereby declare that the above written particulars are to the best of my
-  knowledge &amp; belief.<strong><u></u></strong>
-</p>
-<p>
-  <strong><u></u></strong>
-</p>
-<p>
-  <strong><u></u></strong>
-</p>
-<p align="right">
-  <strong>Aniruddha Das</strong>
-  <a name="_PictureBullets"></a>
-</p>
+<div class="declaration">
+  <p class="heading"><strong>{{heading}}</strong></p>
+  <p class="declaration-text"><span [innerHTML]="declarationText"></span></p>
+  <p class="signature">{{signature}}</p>
+</div>
