--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -36,7 +36,9 @@
   </div>
 
   <div class="sections">
-    <ani-declaration></ani-declaration>
+    <ani-declaration
+      [signature]="'Aniruddha Das'"
+    ></ani-declaration>
   </div>
 
 </div>
