--- a/source/src/app/aniruddh/components/personal-information/personal-information.component.html
+++ b/source/src/app/aniruddh/components/personal-information/personal-information.component.html
@@ -2,14 +2,14 @@
   <p><strong>Personal Details:</strong></p>
 
   <div class="details">
-    <p>VISA : H1B: USA working visa / B1/B2 US business travel visa</p>
-    <p>Date of Birth : 09 June 1985</p>
-    <p>Gender : Male</p>
-    <!--<p>Marital Status : Married</p>-->
-    <!--<p>Passport No : N2042274</p>-->
-    <p>Nationality : Indian</p>
-    <p>Present Address : California, MD USA</p>
-    <p>Language : English, Hindi, Odia</p>
+    <p>VISA : {{visa}}</p>
+    <p>Date of Birth : {{dateOfBirth}}</p>
+    <p>Gender : {{gender}}</p>
+    <!--<p>Marital Status : {{ma}}</p>-->
+    <!--<p>Passport No : {{passportNumber}}</p>-->
+    <p>Nationality : {{nationality}}</p>
+    <p>Present Address : {{address}}</p>
+    <p>Language : {{language}}</p>
 
   </div>
 </div>
